exemplo de uso do value para acessar propriedades do arquivo de configuração do spring boot

--- a/algafood-api/src/main/resources/application.yml
+++ b/algafood-api/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: algafood-api
+
+notificador:
+  email:
+    host-servidor: smtp.algafood.com.br
+    porta-servidor: 25
