--- a/algafood-api/src/main/resources/application.yml
+++ b/algafood-api/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 spring:
   application:
     name: algafood-api
+notificador:
+  email:
+    host-servidor: smtp.algafood.com.br
+    porta-servidor: 25
