exemplo de uso de spring profiles com arquivo de configuração por ambiente

--- a/algafood-api/src/main/resources/application.yml
+++ b/algafood-api/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   application:
     name: algafood-api
+  profiles:
+    active: production
 notificador:
   email:
-    host-servidor: smtp.algafood.com.br
     porta-servidor: 25
